force-app/main/default/objects/Opportunity/fields/Analise_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Analise_de_Credito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analise de Crédito</label>
    <referenceTo>AnaliseDeCredito__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>