force-app/main/default/objects/Opportunity/fields/AprovacaoComercial__c.field-meta.xml
<CustomField>
    <fullName>AprovacaoComercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovação Comercial</label>
    <type>Checkbox</type>
</CustomField>