force-app/main/default/objects/Opportunity/fields/AprovacaooJuridica__c.field-meta.xml
<CustomField>
    <fullName>AprovacaooJuridica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovação Jurídica</label>
    <type>Checkbox</type>
</CustomField>