force-app/main/default/objects/Opportunity/fields/AssessorComercial__c.field-meta.xml
<CustomField>
    <fullName>AssessorComercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor(a) Comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>