force-app/main/default/objects/Opportunity/fields/Campanha__c.field-meta.xml
<CustomField>
    <fullName>Campanha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campanha</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>