force-app/main/default/objects/Opportunity/fields/ComissionTotalPercentage__c.field-meta.xml
<CustomField>
    <fullName>ComissionTotalPercentage__c</fullName>
    <label>Percentual Total de Comissão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>