force-app/main/default/objects/Opportunity/fields/ComissionTotalValue__c.field-meta.xml
<CustomField>
    <fullName>ComissionTotalValue__c</fullName>
    <formula>DiscountedValue__c  * ComissionTotalPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total da Comissão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>