force-app/main/default/objects/Opportunity/fields/CotacaoSincronizada__c.field-meta.xml
<CustomField>
    <fullName>CotacaoSincronizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cotação Sincronizada</label>
    <type>Checkbox</type>
</CustomField>