force-app/main/default/objects/Opportunity/fields/CPFDoIndicante__c.field-meta.xml
<CustomField>
    <fullName>CPFDoIndicante__c</fullName>
    <label>CPF do Indicante</label>
    <length>11</length>
    <type>Text</type>
</CustomField>