force-app/main/default/objects/Opportunity/fields/Descricao_da_Permuta__c.field-meta.xml
<CustomField>
    <fullName>Descricao_da_Permuta__c</fullName>
    <description>Detalhe o bem ou serviço dado como permuta.</description>
    <inlineHelpText>Detalhe o bem ou serviço dado como permuta.</inlineHelpText>
    <label>Descrição da Permuta</label>
    <type>TextArea</type>
</CustomField>