force-app/main/default/objects/Opportunity/fields/DescricaoDoCreditoDeDistrato__c.field-meta.xml
<CustomField>
    <fullName>DescricaoDoCreditoDeDistrato__c</fullName>
    <label>Descrição do Crédito de Distrato</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>