force-app/main/default/objects/Opportunity/fields/DescricaoDoImovelDePermuta__c.field-meta.xml
<CustomField>
    <fullName>DescricaoDoImovelDePermuta__c</fullName>
    <label>Descrição do Imóvel de Permuta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>