force-app/main/default/objects/Opportunity/fields/DescricaoPerda__c.field-meta.xml
<CustomField>
    <fullName>DescricaoPerda__c</fullName>
    <label>Descrição da Perda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>