force-app/main/default/objects/Opportunity/fields/DiasNaFase__c.field-meta.xml
<CustomField>
    <fullName>DiasNaFase__c</fullName>
    <formula>TODAY()  -  DATEVALUE(LastStageChangeDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias na Fase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>