force-app/main/default/objects/Opportunity/fields/DiscountedValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountedValue__c</fullName>
    <label>Valor com Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>