force-app/main/default/objects/Opportunity/fields/EmailDoIndicante__c.field-meta.xml
<CustomField>
    <fullName>EmailDoIndicante__c</fullName>
    <label>Email do Indicante</label>
    <type>Email</type>
</CustomField>