force-app/main/default/objects/Opportunity/fields/EmpreendimentodeInteresse__c.field-meta.xml
<CustomField>
    <fullName>EmpreendimentodeInteresse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empreendimento de Interesse</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Empreendimento__c.Generico__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Oportunidades(Empreendimento de interesse)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>