force-app/main/default/objects/Opportunity/fields/Expectativa_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Expectativa_de_Compra__c</fullName>
    <label>Expectativa de Compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expectativa_de_Compra</valueSetName>
    </valueSet>
</CustomField>