force-app/main/default/objects/Opportunity/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
    <label>Gerente</label>
    <type>Text</type>
</CustomField>