force-app/main/default/objects/Opportunity/fields/M_dia_Atual__c.field-meta.xml
<CustomField>
    <fullName>M_dia_Atual__c</fullName>
    <label>Mídia Atual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Midia</valueSetName>
    </valueSet>
</CustomField>