force-app/main/default/objects/Opportunity/fields/ModalidadeVenda__c.field-meta.xml
<CustomField>
    <fullName>ModalidadeVenda__c</fullName>
    <formula>IF( EmpreendimentodeInteresse__r.ImovelTerceiros__c, &apos;Imóvel de terceiros&apos;, &apos;Incorporação&apos; )</formula>
    <label>Modalidade de venda</label>
    <type>Text</type>
</CustomField>