force-app/main/default/objects/Opportunity/fields/MotivoPerda__c.field-meta.xml
<CustomField>
    <fullName>MotivoPerda__c</fullName>
    <label>Motivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposta Rejeitada</fullName>
            </value>
            <value>
                <fullName>Financiamento Não Aprovado</fullName>
            </value>
            <value>
                <fullName>Cliente Desistiu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>