force-app/main/default/objects/Opportunity/fields/NomeCompletoDoIndicante__c.field-meta.xml
<CustomField>
    <fullName>NomeCompletoDoIndicante__c</fullName>
    <label>Nome Completo do Indicante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>