force-app/main/default/objects/Opportunity/fields/OrigemCampanhaPrincipal__c.field-meta.xml
<CustomField>
    <fullName>OrigemCampanhaPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origem da campanha principal</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>