force-app/main/default/objects/Opportunity/fields/Permuta__c.field-meta.xml
<CustomField>
    <fullName>Permuta__c</fullName>
    <label>Permuta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Permuta Bem</fullName>
                <isActive>false</isActive>
                <label>Permuta Bem</label>
            </value>
            <value>
                <fullName>Permuta Serviços</fullName>
                <isActive>false</isActive>
                <label>Permuta Serviços</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>