force-app/main/default/objects/Opportunity/fields/Potencial_de_Investimento__c.field-meta.xml
<CustomField>
    <fullName>Potencial_de_Investimento__c</fullName>
    <label>Potencial de Investimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PotencialInvestimento</valueSetName>
    </valueSet>
</CustomField>