force-app/main/default/objects/Opportunity/fields/Pretende_Permutar_Da_o__c.field-meta.xml
<CustomField>
    <fullName>Pretende_Permutar_Da_o__c</fullName>
    <label>Pretende Permutar/Dação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SimNao</valueSetName>
    </valueSet>
</CustomField>