force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente de Análise</fullName>
                <default>true</default>
                <label>Pendente de Análise</label>
            </value>
            <value>
                <fullName>Em Análise</fullName>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Reprovada</fullName>
            </value>
            <value>
                <fullName>Expirada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>