force-app/main/default/objects/Opportunity/fields/SubmotivoPerda__c.field-meta.xml
<CustomField>
    <fullName>SubmotivoPerda__c</fullName>
    <label>Submotivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oferta Baixa</fullName>
            </value>
            <value>
                <fullName>Documentação Incompleta</fullName>
            </value>
            <value>
                <fullName>Mudança de Preferência</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>