force-app/main/default/objects/Opportunity/fields/TabelaVenda__c.field-meta.xml
<CustomField>
    <fullName>TabelaVenda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tabela de Venda</label>
    <referenceTo>TabelaVendas__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>