force-app/main/default/objects/Opportunity/fields/TelefoneDoIndicante__c.field-meta.xml
<CustomField>
    <fullName>TelefoneDoIndicante__c</fullName>
    <label>Telefone do Indicante</label>
    <type>Phone</type>
</CustomField>