force-app/main/default/objects/Opportunity/fields/Tipo_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Compra__c</fullName>
    <label>Tipo de Compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investimento</fullName>
            </value>
            <value>
                <fullName>Moradia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>