force-app/main/default/objects/Opportunity/fields/TotalValuePlusReferral__c.field-meta.xml
<CustomField>
    <fullName>TotalValuePlusReferral__c</fullName>
    <label>Valor total com indicação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>