force-app/main/default/objects/Opportunity/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidade</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A Unidade deve estar relacionada ao Empreendimento de Interesse</errorMessage>
        <filterItems>
            <field>$Source.EmpreendimentodeInteresse__c</field>
            <operation>equals</operation>
            <valueField>Product2.Empreendimento__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>