force-app/main/default/objects/Opportunity/fields/Valor_de_Investimento__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Investimento__c</fullName>
    <label>Valor de Investimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValorInvestimento</valueSetName>
    </valueSet>
</CustomField>