force-app/main/default/objects/Opportunity/fields/ValorDaDacao__c.field-meta.xml
<CustomField>
    <fullName>ValorDaDacao__c</fullName>
    <label>Valor da Dação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>