force-app/main/default/objects/Opportunity/fields/ValorDoCreditoDeDistrato__c.field-meta.xml
<CustomField>
    <fullName>ValorDoCreditoDeDistrato__c</fullName>
    <label>Valor do Crédito de Distrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>