force-app/main/default/objects/Opportunity/fields/ValorOportunidade__c.field-meta.xml
<CustomField>
    <fullName>ValorOportunidade__c</fullName>
    <label>Valor da oportunidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>