force-app/main/default/objects/Opportunity/fields/ValorPermuta__c.field-meta.xml
<CustomField>
    <fullName>ValorPermuta__c</fullName>
    <label>Valor Permuta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>