force-app/main/default/objects/Opportunity/recordTypes/Oportunidades.recordType-meta.xml
<RecordType>
    <fullName>Oportunidades</fullName>
    <active>true</active>
    <businessProcess>Processo de Vendas Oportunidade</businessProcess>
    <label>Oportunidades</label>
</RecordType>