force-app/main/default/objects/Opportunity/validationRules/AprovacaoDeAnalise.validationRule-meta.xml
<ValidationRule>
    <fullName>AprovacaoDeAnalise</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &apos;Fechado e Perdido&apos;),
    AND(
        AprovacaoComercial__c = true,
        AprovacaooJuridica__c = true
    )
)</errorConditionFormula>
    <errorMessage>Não é possível perder a Oportunidade com os campos de aprovação assinalados</errorMessage>
</ValidationRule>