force-app/main/default/objects/Opportunity/validationRules/MotivoDaPerda.validationRule-meta.xml
<ValidationRule>
    <fullName>MotivoDaPerda</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &apos;Fechado e Perdido&apos;),
    (ISBLANK(TEXT(MotivoPerda__c)) || ISBLANK(TEXT(SubmotivoPerda__c )))  
)</errorConditionFormula>
    <errorDisplayField>MotivoPerda__c</errorDisplayField>
    <errorMessage>O Motivo da Perda e o Sub-Motivo devem ser preenchidos</errorMessage>
</ValidationRule>