force-app/main/default/objects/Opportunity/validationRules/ProibirVoltarOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>ProibirVoltarOpp</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        ISPICKVAL(StageName, &apos;Documentação&apos;),
        ISPICKVAL(PRIORVALUE(StageName), &apos;Análise Jurídica&apos;)
    ),
    AND(
        ISPICKVAL(StageName, &apos;Proposta&apos;),
        ISPICKVAL(PRIORVALUE(StageName), &apos;Documentação&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Não é permitido voltar para fase da Oportunidade</errorMessage>
</ValidationRule>