force-app/main/default/objects/Opportunity/validationRules/TipoImutavel.validationRule-meta.xml
<ValidationRule>
    <fullName>TipoImutavel</fullName>
    <active>true</active>
    <description>Não permite alteração do campo Tipo</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Type),
    NOT(ISBLANK(PRIORVALUE(Type)))
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Não é possível realizar a alteração do valor</errorMessage>
</ValidationRule>