force-app/main/default/objects/Opportunity/validationRules/ValidacaoOportunidadeFechadoPerdido.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoOportunidadeFechadoPerdido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($Permission.PermissaoParaFecharOportunidade),
    OR(
        ISPICKVAL(StageName, &apos;Fechado e Perdido&apos;),
        ISPICKVAL(StageName, &apos;Fechado e Ganho&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Você não tem Autorização para avançar a oportunidade</errorMessage>
</ValidationRule>