force-app/main/default/objects/Opportunity/validationRules/ValidaStageOportunidade.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaStageOportunidade</fullName>
    <active>true</active>
    <description>Regra para validar a fase na criação de oportunidade</description>
    <errorConditionFormula>AND (
    ISNEW(),
				NOT(ISPICKVAL(StageName, &apos;Proposta&apos;))
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>A Oportunidade deve ser criada na fase de Proposta</errorMessage>
</ValidationRule>